--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
       <color name="teal_700">#FF018786</color>
       <color name="black">#FF000000</color>
       <color name="white">#FFFFFFFF</color>
+
+      <color name="light_gray">#BDC1BD</color>
+          <color name="dark_gray">#727372</color>
   </resources>
